[project]
name = "mmdit-pytorch"
version = "0.1.0"
description = "PyTorch implementations of both the original MMDiT from Stable Diffusion 3 and an extended N-modality MMDiT for flexible multimodal diffusion."
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Navdeep Singh Jakhar", email = "navdeepjakhar30@gmail.com" }
]
keywords = ["mmdit", "multimodal", "multi-modal transformer", "transformer", "diffusion", "stable-diffusion", "pytorch", "joint attention"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
]

dependencies = [
  "torch>=2.0",
  "einops>=0.7",
  "typing-extensions>=4.8",
  "hyper-connections>=0.1.15"
]

[project.optional-dependencies]
examples = []

[project.urls]
"Homepage" = "https://github.com/navjak/mmdit_sd3"
"Repository"= "https://github.com/navjak/mmdit_sd3"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mmdit_pytorch"]
